Filled in content on home screens

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Drewski Labs</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<p>An ever evolving profolio showcasing various ventures <br/>
+									 in photography, wordsmithery, and musicality</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
 								<li><a href="#intro">Intro</a></li>
-								<li><a href="#photos">Photos</a></li>
-								<li><a href="#works">Works</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#photos">Pics</a></li>
+								<li><a href="#blog">Blog</a></li>
+								<li><a href="#flow">Flow</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -46,28 +46,39 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<span class="image main"><img src="images/intro.png" alt="" /></span>
+								<p class="para">In the pursuit of the arts I have discovered a plethora of delightful wonders. By continuing to expand my breathe and depth of understanding I've grown to appreciate a wide range of what life has to offer. Even with all my endeavors to culivate a rich cross section of culture I am still far from knowing it all. As I move forward in life I seek to enrich my experiences through sincere reverence and veneration. Take a peek at my <a href="index.html#photos"><strong>photography</strong></a>!</p>
+								<p class="para">From a very early age I've always sought out knowledge and truth by absorbing as much information as I possibly could. I have a true passion for learning indiscriminately, nothing is too outside the box for this mindful sponge. One can tap into our emotional core with a well composed sonnet, bending words to elicit pure reactions through genuine expression. Come along down the rabbithole by exploring my <a href="index.html#blog"><strong>blog</strong></a>!</p>
+								<p class="para">When the creative juices are flowing anything is possible. I thoroughly enjoy those moments of creation when the result of your efforts come to life. Whether that's through artistic means or engineered into being matters little when it comes to this producer. I build with my hands as much as I do with my mind, usually involving equal parts labor and equal parts thought. Check out creativity at work via my <a href="index.html#flow"><strong>musicality</strong></a>!</p>
 							</article>
 
-						<!-- Work -->
+						<!-- Pics -->
 							<article id="photos">
-								<h2 class="major">Photos</h2>
+								<h2 class="major">Photography</h2>
 								<span class="image main"><img src="images/photo-banner.png" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
-								<a href="pages/galleries/bloom2/bloom2.html">Bloom 2</a>
-								<a href="pages/galleries/bonanza/bonanza.html">Bonanza</a>
-								<a href="pages/galleries/das2018/das2018.html">Das Energi</a>
+								<p class="para">Vision dominates the senses; as result, capturing stills of majesty, via a camera, is priceless to me. My intent is not to experience life through a lens, rather I hope to immortalize awe-dropping vistas. Always keeping an eye out for the perfect frame to share with others, regardless of theme, environment or subject. Recently, my efforts have focused on event photography, primarily long exposure shots of LEDs wielded by flowsters channeling the energy of the crowd and music.</p>
+								<span>Check out the sets from festivals where I captured stellar moments: </span>
+								<h3><a href="pages/galleries/bloom2/bloom2.html">Bloom 2</a></h3>
+								<h3><a href="pages/galleries/bonanza/bonanza.html">Bonanza</a></h3>
+								<!--<h3><a href="pages/galleries/das2018/das2018.html">Das Energi</a></h3>-->
+								<h3><a href="#photos">Das Energi - Coming Soon</a></h3>
+								<p>For more albums beyond the highlights above check out <a href="https://www.facebook.com/DrewskiLabs"><span class="label">Drewski Labs' Facebook</span></a> page!</p>
 							</article>
 
-						<!-- About -->
-							<article id="works">
-								<h2 class="major">Works</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
-								<a href="pages/blog/blogger.html">Blog</a>
+						<!-- Blog -->
+							<article id="blog">
+								<h2 class="major">Wordsmithery</h2>
+								<span class="image main"><img src="images/words.png" alt="" /></span>
+								<p class="para">In my <strong><a href="pages/blog/blogger.html">blog</a></strong> I explore concepts, thoughts, feelings, and ideas through the artist expression of wordsmithing.</p>
+								<p class="para">The yearning to write burns within me. There are many racing thoughts that it becomes a challenges to hone in on one to articulate, however, wordsmithing is my favorite form of expression. As I stumble over my native language, I am constantly fascinated by the depths and heights that can be achieved. Messing words together on paper is the medium of art where I am most comfortable. </p>
+								<p class="para">The mind is a decently complex pattern recognition engine, designed and evolved through the course of time to product several sophisticated components that include but are not limited to: spatial modeling, temporal projections, emotional intuition and logical processing. Vocabulary only represents a portion of the building blocks that make up any given language set, it doesn’t even take into account grammar, punctuation or semantic meanings that go beyond what’s writing or spoken.</p>
+							</article>
+
+						<!-- Flow -->
+							<article id="flow">
+								<h2 class="major">Musicality</h2>
+								<span class="image main"><img src="images/flow.png" alt="" /></span>
+								<p>Section Under Construction</p>
 							</article>
 
 						<!-- Contact -->
@@ -348,7 +359,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<!-- Footer -->
 					<footer id="footer">
 						<p class="copyright">
-							Drewski Labs © All Rights Reserved.  |  Design: <a href="http://html5up.net">HTML5 UP</a>  |  v 0.3
+							Drewski Labs © All Rights Reserved.  |  Design: <a href="http://html5up.net">HTML5 UP</a>  |  v 0.3  |  <a href="index.html#contact">Contact</a>
 						</p>
 					</footer>
 
