--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							<article id="blog">
 								<h2 class="major">Wordsmithery</h2>
 								<span class="image main"><img src="images/words.png" alt="" /></span>
-								<!--<p class="para">In my <strong><a href="pages/blog/blog.html">blog</a></strong> I explore concepts, thoughts, feelings, and ideas through the artist expression of wordsmithing.</p>-->
+								<p class="para">In my <strong><a href="pages/blog/blog.html">blog</a></strong> I explore concepts, thoughts, feelings, and ideas through the artist expression of wordsmithing.</p>
 								<p class="para">The yearning to write burns within me. There are many racing thoughts that it becomes a challenges to hone in on one to articulate, however, wordsmithing is my favorite form of expression. As I stumble over my native language, I am constantly fascinated by the depths and heights that can be achieved. Messing words together on paper is the medium of art where I am most comfortable. </p>
 								<p class="para">The mind is a decently complex pattern recognition engine, designed and evolved through the course of time to product several sophisticated components that include but are not limited to: spatial modeling, temporal projections, emotional intuition and logical processing. Vocabulary only represents a portion of the building blocks that make up any given language set, it doesn’t even take into account grammar, punctuation or semantic meanings that go beyond what’s writing or spoken.</p>
 							</article>
@@ -80,7 +80,7 @@
 								<span class="image main"><img src="images/flow.png" alt="" /></span>
 
 								<p>Section Under Construction</p>
-								<!--<strong><a href="pages/flow/flow.html">blog</a></strong>-->
+								<strong><a href="pages/flow/flow.html">Flow Stuffs</a></strong>
 							</article>
 
 						<!-- Contact -->
@@ -361,8 +361,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<!-- Footer -->
 					<footer id="footer">
 						<p class="copyright">
-							Drewski Labs © All Rights Reserved.  |  Design: <a href="http://html5up.net">HTML5 UP</a>  |  v 0.3  |
-							<!--<a href="index.html#contact">Contact</a>-->
+							Drewski Labs © All Rights Reserved.  |  Design: <a href="http://html5up.net">HTML5 UP</a>  |  v 0.3  | <a href="index.html#contact">Contact</a>
 						</p>
 					</footer>
 
