Added Das Photo & Musicality text

--- a/index.html
+++ b/index.html
@@ -60,16 +60,15 @@
 								<span>Check out the sets from festivals where I captured stellar moments: </span>
 								<h3><a href="pages/pics/bloom2/bloom2.html">Bloom 2</a></h3>
 								<h3><a href="pages/pics/bonanza/bonanza.html">Bonanza</a></h3>
-								<!--<h3><a href="pages/pics/das2018/das2018.html">Das Energi</a></h3>-->
-								<h3><a href="#photos">Das Energi - Coming Soon</a></h3>
-								<p>For more albums beyond the highlights above check out <a href="https://www.facebook.com/DrewskiLabs"><span class="label">Drewski Labs' Facebook</span></a> page!</p>
+								<h3><a href="pages/pics/das2018/das2018.html">Das Energi</a></h3>
+								<p>For more albums beyond the highlights above check out <strong><a href="https://www.facebook.com/DrewskiLabs">Drewski Labs' Facebook</a></strong> page!</p>
 							</article>
 
 						<!-- Blog -->
 							<article id="blog">
 								<h2 class="major">Wordsmithery</h2>
 								<span class="image main"><img src="images/words.png" alt="" /></span>
-								<p class="para">In my <strong><a href="pages/blog/blog.html">blog</a></strong> I explore concepts, thoughts, feelings, and ideas through the artist expression of wordsmithing.</p>
+								<!--<p class="para">In my <strong><a href="pages/blog/blog.html">blog</a></strong> I explore concepts, thoughts, feelings, and ideas through the artist expression of wordsmithing.</p>-->
 								<p class="para">The yearning to write burns within me. There are many racing thoughts that it becomes a challenges to hone in on one to articulate, however, wordsmithing is my favorite form of expression. As I stumble over my native language, I am constantly fascinated by the depths and heights that can be achieved. Messing words together on paper is the medium of art where I am most comfortable. </p>
 								<p class="para">The mind is a decently complex pattern recognition engine, designed and evolved through the course of time to product several sophisticated components that include but are not limited to: spatial modeling, temporal projections, emotional intuition and logical processing. Vocabulary only represents a portion of the building blocks that make up any given language set, it doesn’t even take into account grammar, punctuation or semantic meanings that go beyond what’s writing or spoken.</p>
 							</article>
@@ -79,38 +78,40 @@
 								<h2 class="major">Musicality</h2>
 								<span class="image main"><img src="images/flow.png" alt="" /></span>
 
-								<p>Section Under Construction</p>
-								<strong><a href="pages/flow/flow.html">Flow Stuffs</a></strong>
+								<p>There was a dear friend of mine that was this phenomenal glover, he would shape stories with his flow and left me flabbergasted every time he put on his Matrix chip set. While attending a party on April 20th in 2013, I started to learn how to glove. At that point he had been gloving for over a year so had some fantastic insights into the art. He drew the comparison between modeling engines for games and the way he envisioned his gloving; this was for his tuts, liquid, conjuration, or you name it, he would imagine his flow using his mental engine and push himself to master new moves constantly. His ability to form incredibly crafted works of performance art leaves me inspired; even now, five years after his passing.</p>
+								<p>Gloving serves as one of my primary mediums of expression, melting someone’s face is the greatest form of ecstasy to me. Personally, I love to weave a story with my hands, grooving in beat with the tunes and taking people to new heights as they come along for the ride. My gloves are an extension of my being. They represent a part of me that ripples out into numerous other areas of my life. Such as studying Audio Production at Full Sail so that I could one day compose music that matches my style of flow, or learning Tai Chi to bring balance to what friends of mine call my Glove Fu.</p>
+								<p>Without flow arts, I doubt I would be such a PLURster. It was my gateway drug into the world of Peace, Love, Unity and Respect. I attend local shows at minimum twice a month, upwards of six, and in recent years have gone to no fewer than eight festivals nationwide. Using flow, mainly my gloves and poi, I enthrall people from all walks of life and connect with them after wowing them with my digits. Many friendships have formed over the years as a direct result of sharing in the mutual passion for musicality. Without gloving, I have no clue what kind of person I would be today as it has shaped so many aspects of my existence.</p>
+								<!--<strong><a href="pages/flow/flow.html">Flow Stuffs</a></strong>-->
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
+								<p>Wanting to learn more about Drewski Labs? Contact us via <strong><a href="mailto:drewskilabs@gmail.com">email</a></strong> or follow us on social media.</p>
+								<!--<form method="post" action="#">-->
+									<!--<div class="fields">-->
+										<!--<div class="field half">-->
+											<!--<label for="name">Name</label>-->
+											<!--<input type="text" name="name" id="name" />-->
+										<!--</div>-->
+										<!--<div class="field half">-->
+											<!--<label for="email">Email</label>-->
+											<!--<input type="text" name="email" id="email" />-->
+										<!--</div>-->
+										<!--<div class="field">-->
+											<!--<label for="message">Message</label>-->
+											<!--<textarea name="message" id="message" rows="4"></textarea>-->
+										<!--</div>-->
+									<!--</div>-->
+									<!--<ul class="actions">-->
+										<!--<li><input type="submit" value="Send Message" class="primary" /></li>-->
+										<!--<li><input type="reset" value="Reset" /></li>-->
+									<!--</ul>-->
+								<!--</form>-->
 								<ul class="icons">
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									<!--<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>-->
+									<li><a href="https://www.facebook.com/DrewskiLabs" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/drewskilabs/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 								</ul>
 							</article>
 
